--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -20,10 +20,11 @@
   border-radius: 12px;
  
 }
-.buttomContact a {
+.buttomContact{
   color: white;
 }
-.buttomContact a:hover {
+.buttomContact:hover {
   color: red;
   text-decoration: none;
+  border: none;
 }
